--- a/frontend/package.json
+++ b/frontend/package.json
@@ -2,6 +2,7 @@
   "name": "frontend",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://localhost:18900",
   "type": "module",
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.5.2",
@@ -22,6 +23,7 @@
     "@tailwindcss/forms": "0.5.0",
     "autoprefixer": "^10.4.19",
     "css-loader": "^7.1.2",
+    "gh-pages": "^6.1.1",
     "postcss-loader": "^8.1.1",
     "style-loader": "^4.0.0",
     "tailwindcss": "^3.4.3",
@@ -32,7 +34,9 @@
     "start": " node readConfig.js && react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
